v3.9.0 b725
* fix nametags permanently visible on 1.19.3
* fix nametag issues on spigot